<resources>
    <string name="app_name">Wearables</string>
    <string name="txt_empty" />
    <string name="txt_done">Done</string>
    <string name="txt_gallery">Open Gallery</string>
    <string name="txt_take_camera">Take Camera</string>
    <string name="txt_select_video">Select video</string>
    <string name="hint_min_gap">Enter min duration(in secs)</string>
    <string name="hint_min_max">Min duration(in secs)</string>
    <string name="txt_min_max">Selet video-minGap to maxgap trim</string>
    <string name="txt_option">Options</string>
    <string name="txt_max_duration_secs">Max duration(in secs)</string>
    <string name="txt_enter_fixed_trim_duration_in_secs">Enter fixed trim duration(in secs)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="processing_please_wait">Processing....Please wait...</string>
    <string name="zendesk_channel_key">eyJzZXR0aW5nc191cmwiOiJodHRwczovL3dlYXJhYmxlcy56ZW5kZXNrLmNvbS9tb2JpbGVfc2RrX2FwaS9zZXR0aW5ncy8wMUY2Rk41N0dYWTcxTjk2U0FYQUg0U0dOWC5qc29uIn0=</string>
</resources>
