<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TrimmerMainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/processing_please_wait">

    </TextView>

    <androidx.core.widget.NestedScrollView style="@style/VView"
        android:visibility="gone">

        <LinearLayout style="@style/VView">

            <VideoView
                android:id="@+id/video_view"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="300dp" />

            <LinearLayout
                style="@style/VView"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="12dp">


                <Button
                    android:id="@+id/btn_default_trim"
                    style="@style/BtnStyle"
                    android:visibility="gone"
                    android:text="Selet video" />

                <EditText
                    android:id="@+id/edt_fixed_gap"
                    style="@style/EdtStyle"
                    android:visibility="gone"
                    android:hint="@string/txt_enter_fixed_trim_duration_in_secs" />

                <Button
                    android:id="@+id/btn_fixed_gap"
                    style="@style/BtnStyle"
                    android:visibility="gone"
                    android:text="Selet video-fixedgap trim" />


                <EditText
                    android:id="@+id/edt_min_gap"
                    style="@style/EdtStyle"
                    android:visibility="gone"
                    android:hint="@string/hint_min_gap" />

                <Button
                    android:id="@+id/btn_min_gap"
                    style="@style/BtnStyle"
                    android:visibility="gone"
                    android:text="Selet video-minGap trim" />

                <LinearLayout style="@style/LView"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/edt_min_from"
                        style="@style/EdtStyle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:hint="@string/hint_min_max" />

                    <EditText
                        android:id="@+id/edt_max_to"
                        style="@style/EdtStyle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:hint="@string/txt_max_duration_secs" />
                </LinearLayout>


                <Button
                    android:id="@+id/btn_min_max_gap"
                    style="@style/BtnStyle"
                    android:visibility="gone"
                    android:layout_marginBottom="15dp"
                    android:text="@string/txt_min_max" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>